<resources>
    <string name="app_name">Business Application</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="runtime_permissions_txt">Please enable all permissions form app settings</string>

    <string name="password">Password</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="reenter_the_password">Re-enter the password</string>

    <string name="packaging_charges">Packaging charges</string>

    <string name="insurance_charges">Insurance charges</string>

    <string name="sgst_charges">SGST</string>

    <string name="cgst_charges">CGST</string>

    <string name="igst_charges">IGST</string>

    <string name="freight_charges">Freight charges</string>

    <string name="total_amount">Total Amount</string>
    <string name="slogan">CNP The Heart Of Life</string>

    <string name="check_price">Check Price</string>
    <string name="check_stock">Check Stock</string>
    <string name="my_customer">My Customer</string>
    <string name="generate_quotation">Generate Quotation</string>
    <string name="quotation_list">Quotation List</string>
    <string name="visit">Visit</string>
    <string name="collection">Collection</string>
    <string name="outstanding">Outstanding</string>
    <string name="order_process">Order Process</string>
    <string name="click_here">Click Here</string>
    <string-array name="product_type">
        <item>Local</item>
        <item>Export</item>
    </string-array>
    <string-array name="gst_type">
        <item>Select GST Type</item>
        <item>Within State/Local</item>
        <item>Outside State /Inter State</item>
        <item>HO</item>
    </string-array>
    <string-array name="quotation_status">
        <item>Lost Quotation</item>
        <item>Waiting For Approval</item>
        <item>Approved by admin</item>
        <item>Waiting for customer</item>
        <item>Order Received</item>
        <item>Ready for Approval"</item>
        <item>PI"</item>
    </string-array>
    <string-array name="lunch_type">
        <item>Select Type</item>
        <item>PreLunch</item>
        <item>PostLunch</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_cnpapplication">CNPApplicationActivity</string>


</resources>
