<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:weightSum="100">

        <!--<android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:paddingLeft="-10dp"
            app:contentInsetLeft="-20dp"
            app:contentInsetStart="-20dp"
            app:contentInsetStartWithNavigation="-20dp"
            app:layout_collapseMode="pin"
            app:layout_scrollFlags="scroll|enterAlways"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        </android.support.v7.widget.Toolbar> -->

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/change_password"
            android:textSize="18sp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/colorPrimary"
            app:hintTextAppearance="@style/InputTextLabel">

            <EditText
                android:id="@+id/edt_old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/old_password"
                android:inputType="textPassword"
                android:imeOptions="actionNext"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textSize="22sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/colorPrimary"
            app:hintTextAppearance="@style/InputTextLabel">

            <EditText
                android:id="@+id/edt_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:imeOptions="actionNext"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textSize="22sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/colorPrimary"
            app:hintTextAppearance="@style/InputTextLabel">

            <EditText
                android:id="@+id/edt_reenter_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:inputType="textPassword"
                android:hint="@string/reenter_the_password"
                android:imeOptions="actionDone"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textSize="22sp" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/txt_error_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="12sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_change_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_button"
        android:text="@string/change_password"
        android:textColor="@android:color/white"
        android:textSize="19sp" />


</android.support.design.widget.CoordinatorLayout>
