<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:scaleType="centerInside"
                android:src="@drawable/logo" />

        </LinearLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:id="@+id/cardViewMain"
            android:elevation="10dp"
            app:cardBackgroundColor="@color/cardview_light_background"
            app:cardCornerRadius="@dimen/cardview_default_radius">


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:orientation="vertical"
                android:weightSum="4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/linearCheckPrice"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="0.2dp"
                        android:layout_weight="1"
                        android:background="@android:color/white"
                        android:orientation="vertical"
                        android:padding="5dp"
                        android:weightSum="6">

                        <ImageView
                            android:id="@+id/imageNational"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="4"
                            android:padding="20dp"
                            android:src="@drawable/ic_check_price" />

                        <TextView
                            style="@style/TextAppearance.AppCompat.Small"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:text="@string/check_price"
                            android:textColor="@color/colorPrimaryDark" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearCheckStock"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="0.2dp"
                        android:layout_weight="1"
                        android:background="@android:color/white"
                        android:orientation="vertical"
                        android:padding="5dp"
                        android:weightSum="6">

                        <ImageView
                            android:id="@+id/imageInternational"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="4"
                            android:padding="20dp"
                            android:src="@drawable/ic_check_stock" />

                        <TextView
                            style="@style/TextAppearance.AppCompat.Small"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:text="@string/check_stock"
                            android:textColor="@color/colorPrimaryDark" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearMyCustomer"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="0.2dp"
                        android:layout_weight="1"
                        android:background="@android:color/white"
                        android:orientation="vertical"
                        android:padding="5dp"
                        android:weightSum="6">

                        <ImageView
                            android:id="@+id/imageSports"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="4"
                            android:padding="20dp"
                            android:src="@drawable/ic_my_customer" />

                        <TextView
                            style="@style/TextAppearance.AppCompat.Small"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:text="@string/my_customer"
                            android:textColor="@color/colorPrimaryDark" />

                    </LinearLayout>

                </LinearLayout>


                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <LinearLayout
                        android:id="@+id/linearGenQuotation"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="0.2dp"
                        android:layout_weight="1"
                        android:background="@android:color/white"
                        android:orientation="vertical"
                        android:padding="5dp"
                        android:weightSum="6">

                        <ImageView
                            android:id="@+id/imageAppointments"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="4"
                            android:padding="20dp"
                            android:src="@drawable/ic_generate_quotation" />

                        <TextView
                            style="@style/TextAppearance.AppCompat.Small"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:text="@string/generate_quotation"
                            android:textColor="@color/colorPrimaryDark" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearQuoList"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="0.2dp"
                        android:layout_weight="1"
                        android:background="@android:color/white"
                        android:orientation="vertical"
                        android:padding="5dp"
                        android:weightSum="6">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="4"
                            android:padding="20dp"
                            android:src="@drawable/ic_quotation_list" />

                        <TextView
                            style="@style/TextAppearance.AppCompat.Small"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:text="@string/quotation_list"
                            android:textColor="@color/colorPrimaryDark" />

                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/linearVisit"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="0.2dp"
                        android:layout_weight="1"
                        android:background="@android:color/white"
                        android:orientation="vertical"
                        android:padding="5dp"
                        android:weightSum="6">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="4"
                            android:padding="20dp"
                            android:src="@drawable/ic_daily_visits" />

                        <TextView
                            style="@style/TextAppearance.AppCompat.Small"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:text="@string/visit"
                            android:textColor="@color/colorPrimaryDark" />

                    </LinearLayout>

                </LinearLayout>


                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <LinearLayout
                        android:id="@+id/linearCollection"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="0.2dp"
                        android:layout_weight="1"
                        android:background="@android:color/white"
                        android:orientation="vertical"
                        android:padding="5dp"
                        android:weightSum="6">

                        <ImageView
                            android:id="@+id/imageEconomic"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="4"
                            android:padding="20dp"
                            android:src="@drawable/ic_collection" />

                        <TextView
                            style="@style/TextAppearance.AppCompat.Small"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:text="@string/collection"
                            android:textColor="@color/colorPrimaryDark" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearOutstanding"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="0.2dp"
                        android:layout_weight="1"
                        android:background="@android:color/white"
                        android:orientation="vertical"
                        android:padding="5dp"
                        android:weightSum="6">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="4"
                            android:padding="20dp"
                            android:src="@drawable/ic_outstanding" />

                        <TextView
                            style="@style/TextAppearance.AppCompat.Small"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:text="@string/outstanding"
                            android:textColor="@color/colorPrimaryDark" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearOrderProcess"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="0.2dp"
                        android:layout_weight="1"
                        android:background="@android:color/white"
                        android:orientation="vertical"
                        android:padding="5dp"
                        android:weightSum="6">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="4"
                            android:padding="20dp"
                            android:src="@drawable/ic_order_process" />

                        <TextView
                            style="@style/TextAppearance.AppCompat.Small"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:text="@string/order_process"
                            android:textColor="@color/colorPrimaryDark" />

                    </LinearLayout>


                </LinearLayout>


                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <LinearLayout
                        android:id="@+id/linearExplodedList"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="0.2dp"
                        android:layout_weight="1"
                        android:background="@android:color/white"
                        android:orientation="vertical"
                        android:padding="5dp"
                        android:weightSum="6">

                        <ImageView
                            android:id="@+id/imageExplodedList"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="4"
                            android:padding="20dp"
                            android:src="@drawable/ic_cnpexplodedview" />

                        <TextView
                            style="@style/TextAppearance.AppCompat.Small"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:text="Exploded List"
                            android:textColor="@color/colorPrimaryDark" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearCNPApplication"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="0.2dp"
                        android:layout_weight="1"
                        android:background="@android:color/white"
                        android:orientation="vertical"
                        android:padding="5dp"
                        android:weightSum="6">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="4"
                            android:padding="20dp"
                            android:src="@drawable/ic_vector_cnpapplication" />

                        <TextView
                            style="@style/TextAppearance.AppCompat.Small"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:text="CNP Application"
                            android:textColor="@color/colorPrimaryDark" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearCNPProfile"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="0.2dp"
                        android:layout_weight="1"
                        android:background="@android:color/white"
                        android:orientation="vertical"
                        android:padding="5dp"
                        android:weightSum="6">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="4"
                            android:padding="20dp"
                            android:src="@drawable/ic_vector_cnpprofile" />

                        <TextView
                            style="@style/TextAppearance.AppCompat.Small"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:text="CNP Profile"
                            android:textColor="@color/colorPrimaryDark" />

                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>

            </ScrollView>



        </android.support.v7.widget.CardView>

    </LinearLayout>



</RelativeLayout>